@@ -14,7 +14,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
-__version__ = "$Revision: 1.15 $"[11:-2]
+__version__ = "$Revision: 1.16 $"[11:-2]
 
 """
 
@@ -120,6 +120,7 @@ class PathReferenceAcquisitionContext(PathReferenceContext):
         for indexName in indexNames:
             if indexName in childNames:
                 return thisOb.getChild(indexName, self)
+        return None
 
     def parentRef(self):
         """
